# git1

./: .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  ALL_CODE_BASE.py  ALL_PROJECT_CONTEXT.txt  AUDIT_REPORT_V3.txt  BRIDGE_SCANNER_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODE_LOGIC.txt  CONFIG_V8_MIGRATION_SUMMARY.md  CSHARP_MIGRATION_STATUS.md  DUAL_CONFIG_VERIFICATION.md  EVALUATION_SUMMARY.md  FIX_CHAM_COUNT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Kế Hoạch Nâng Cấp Hệ Thống Phân Tích Xổ Số (V7.0)K.txt  MIGRATION_COMPLETION_REPORT.md  NOTE.txt  PROJECT_FULL_CONTEXT.txt  PR_SUMMARY.md  PYQT_PROTOTYPE_README.md  QUICKSTART_CSHARP.md  README.md  SYSTEM_EVALUATION.md  UI_MOCKUP.txt  UI_PREVIEW.md  UI_SIMPLIFICATION.md  UPGRADE_ACTION_PLAN.md  UPGRADE_PROGRESS.md  V77_UPGRADE_SUMMARY.md  V8.2_COMPLETE_SUMMARY.md  WEEK1_SUMMARY.md  WEEK2_DAY1_SUMMARY.md  ai_scaler.joblib  app_controller.py  check_final_fix.py  clean_run.py  (+36 more)
.claude/: settings.local.json
DOC/: ACCURACY_PERFORMANCE_PLAN.md  BRIDGE_SCANNER_USAGE.md  CHANGELOG_V10.1.md  CHANGELOG_V10.2.md  CHANGELOG_V10.3.md  CHANGELOG_V10.4.md  CHANGELOG_V10.5.md  CHANGELOG_V10.6.md  CHANGELOG_V10.7.md  CHANGELOG_V11.0.md  CHANGELOG_V11.3.md  CONFIG_V8_MIGRATION_GUIDE.md  DASHBOARD_FILTERING_V8.2.md  DE_DASHBOARD_FILTERING_V8.2.md  DUAL_CONFIG_V8_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  K1N_MIGRATION_GUIDE.md  Kế Hoạch Nâng Cấp Hệ Thống Phân Tích Xổ Số.txt  Kế Hoạch Sửa Lỗi Theo Giai Đoạn.txt  MEMORY_BRIDGES_IMPLEMENTATION.md  (+40 more)
(+375 files in other folders)
